<resources>
    <string name="app_name">BMI_Gavin</string>
    <string name="hintHeightF">Enter height ft"</string>
    <string name="hintHeightI">Enter height inch</string>
    <string name="hintWeight">Enter Weight</string>
    <string name="calculateButton">Calculate</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="healthy">Healthy</string>
    <string name="overWeight">Fat ass bitch!</string>
    <string name="results">Result</string>
    <string name="reset">RESET</string>
    <string name="history">History</string>
    <string name="searchBMI">Search BMI</string>
    <string name="enterDate">Enter date (MM-DD-YY)</string>
    <string name="search">Search</string>
    <string name="valueOfWeight">Value of weight</string>
    <string name="valueOfBMI">Value of BMI</string>
</resources>