<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:gravity="center"
    android:padding="30dp"
    android:layout_margin="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateBMI"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:id="@+id/bmiText"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintWeight"
        android:inputType="number"
        android:id="@+id/weight"
        android:autofillHints="200" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintHeightF"
        android:inputType="number"
        android:id="@+id/heightFeet"
        android:autofillHints="200" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintHeightI"
        android:inputType="number"
        android:id="@+id/heightInch"
        android:autofillHints="200" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateButton"
        android:backgroundTint="#09730D"
        android:id="@+id/btnCalc"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:backgroundTint="#09730D"
        android:id="@+id/resetBMI"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:backgroundTint="#09730D"
        android:id="@+id/history"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:id="@+id/resultText"
        />


</LinearLayout>
